--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,3 +23,5 @@ Suggests:
     rmarkdown
 VignetteBuilder: knitr
 Config/testthat/edition: 3
+URL: https://github.com/liuzhi1993/muscle
+BugReports: https://github.com/liuzhi1993/muscle/issues
